# swe-take-home-main-2

./: .gitignore  NOTES.md  README.md  eval_dataset.csv  main.py  pyproject.toml  test.jsonl  test_checkpoint.jsonl
data/prompts/: evaluation_prompt_template.txt  question_prompt_template.txt
evals/: checkpoint.py  metadata.py  runner.py
models/: _retry.py  anthropic.py  base.py  huggingface.py  mock.py  models.py  openai.py
tests/: test_checkpoint.py  test_retry.py  test_runner.py
